# stem-kreep

./: HISTORY.rst  LICENSE  Makefile  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
docs/: conf.py  index.rst  make.bat
src/stem_kreep/: __init__.py  cli.py
src/stem_kreep/commands/: analyze.py
stem_kreep/: AUTHORS.rst  CONTRIBUTING.rst  README.rst
stem_kreep/docs/: Makefile  installation.rst  usage.rst
stem_kreep/src/stem_kreep/: __init__.py  cli.py
tests/: __init__.py  test_cli.py  test_stem_kreep.py
