[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stem_kreep"
version = "0.1.0"
description = "AI-based music analysis, stem identifier, and recreation assistant"
readme = "README.rst"
authors = [
  {name = "Nate Pepper", email = "n8@skopekreep.com"}
]
maintainers = [
  {name = "Nate Pepper", email = "n8@skopekreep.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/skopekreepmusic/stem_kreep/issues"
changelog = "https://github.com/skopekreepmusic/stem_kreep/blob/master/changelog.md"
homepage = "https://github.com/skopekreepmusic/stem_kreep"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

